--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
     
     <div class="Box" id="Box" >
         <div class="BoxD">
-
         </div>
     </div>
 
+    <div class="ReadBook">
+    <pre id="fileContent"></pre>
+    </div>
 
-    
 
     <script src="EnglishBooks.js"></script>
 </body>
