add render Book

--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
     <div class="books" id="books"></div>
     </div>
 
-    
+
     <div class="Box" id="Box" >
         <div class="BoxD">
         </div>
     </div>
 
     <div class="ReadBook">
-    <pre id="fileContent"></pre>
+        <pre class="fileContent" id="fileContent"></pre>
     </div>
+    
 
 
     <script src="EnglishBooks.js"></script>
